enhance write cache, add block cache